--- a/services/avatar-ui/service-config.yaml
+++ b/services/avatar-ui/service-config.yaml
@@ -13,6 +13,7 @@ service:
 # AGENT_ID=agents
 # THREAD_ID=local
 # SERVER_HOST=127.0.0.1
+# SERVER_BIND_HOST=0.0.0.0       # WSL から Windows ブラウザでアクセスする場合に有効
 # SERVER_PORT=8000
 # CLIENT_PORT=5173
 # APP_ENV=dev
