--- a/services/api-gateway/EPIC-API-002-minirag/minirag_app/Dockerfile.minirag_on_postgre
+++ b/services/api-gateway/EPIC-API-002-minirag/minirag_app/Dockerfile.minirag_on_postgre
@@ -19,7 +19,7 @@ COPY requirements.txt .
 # 外部依存関係をインストール（ソースコード変更時も再実行されない）
 RUN pip install --user --no-cache-dir --timeout=600 --retries=5 -r requirements.txt
 
-RUN pip install --user --no-cache-dir --timeout=600 --retries=5 jupyter notebook
+RUN pip install --user --no-cache-dir --timeout=600 --retries=5 fastapi uvicorn python-multipart
 
 RUN pip install --user --no-cache-dir --timeout=600 --retries=5 transformers torch sentence-transformers
 
@@ -33,6 +33,8 @@ COPY setup.py .
 
 # ソースコードをコピー（最後にコピーしてキャッシュ効率を最大化）
 COPY minirag ./minirag
+# FastAPI サービス本体
+COPY minirag_service.py .
 # docsフォルダをコピー（Jupyter Notebookで使用するため）
 COPY docs ./docs
 
@@ -54,11 +56,11 @@ COPY --from=builder /root/.local /root/.local
 # アプリケーションコードをコピー
 COPY --from=builder /app/minirag ./minirag
 COPY --from=builder /app/setup.py .
+COPY --from=builder /app/minirag_service.py ./minirag_service.py
 COPY --from=builder /app/docs ./docs
 
 ENV PATH="/root/.local/bin:${PATH}"
 
 EXPOSE 8165
-RUN mkdir -p /root/.jupyter
 
-CMD ["jupyter", "notebook", "--ip=0.0.0.0", "--port=8165", "--no-browser", "--allow-root", "--NotebookApp.token=", "--NotebookApp.password="]
+CMD ["uvicorn", "minirag_service:app", "--host", "0.0.0.0", "--port", "8165"]
