MiniRAG API timeout設定を追加し、関連する設定とエラーハンドリングを強化

--- a/services/avatar-ui/settings.default.json5
+++ b/services/avatar-ui/settings.default.json5
@@ -85,5 +85,7 @@
     workspace: "diary",
     searchEnabledDefault: true,
     topKDefault: 3,
+    // MiniRAG API のタイムアウト（秒）
+    timeoutSeconds: 300,
   },  
 }
