MiniRAG設定に検索モードの設定を追加し、モード選択をサポートするようUIを更新しました。また、バックエンドで許可されたモードの検証を実装しました。

--- a/services/avatar-ui/service-config.example.yaml
+++ b/services/avatar-ui/service-config.example.yaml
@@ -10,5 +10,7 @@ minirag:
   workspace: diary
   search_enabled_default: true
   top_k_default: 3
+  search_modes_default:
+    - mini
 
 # 実際の起動は .env と settings.json5 を利用してください。
