--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "pipmaster>=1.0.10",
     "psycopg[binary]>=3.3.2",
     "pydantic>=2.12.5",
+    "pyyaml>=6.0.1",
     "pypdf2>=3.0.1",
     "pytest>=9.0.2",
     "python-dotenv>=1.2.1",
