Web検索トグル機能を追加し、MiniRAG検索トグルと独立して設定できるようにしました。関連する設定、UI、APIエンドポイントを更新し、Web検索結果をOpenRouterのユーザーコンテキストに注入する機能を実装しました。

--- a/services/avatar-ui/settings.default.json5
+++ b/services/avatar-ui/settings.default.json5
@@ -95,6 +95,10 @@
     // MiniRAG API のタイムアウト（秒）
     timeoutSeconds: 300,
   },
+  webSearch: {
+    // Web検索トグルの初期値
+    enabledDefault: true,
+  },
   profiling: {
     // プロファイリング用のモデル
     model: "deepseek/deepseek-v3.2-speciale",
