Web検索機能に自動判断オプションを追加し、関連する設定ファイルとドキュメントを更新しました。これにより、OpenRouterが必要に応じてWeb検索を実行できるようになります。

--- a/services/avatar-ui/settings.default.json5
+++ b/services/avatar-ui/settings.default.json5
@@ -98,6 +98,8 @@
   webSearch: {
     // Web検索トグルの初期値
     enabledDefault: true,
+    // OpenRouter に検索要否を判断させる
+    autoDecision: true,
   },
   profiling: {
     // プロファイリング用のモデル
